# putty-aes-ni

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  aescpuid.c  aescpuid_impl.c  aesdemo.c  aesperf.c  appveyor.yml  benchmark.cpp  demo.c  generate.sh  geomean.py  intf.c  intf.h  run.sh  ssh.c
.github/workflows/: aes-perf.yml
Putty/: LICENCE  Recipe  cmdgen.c  minibidi.c  misc.h  mkfiles.pl  pscp.c  psftp.c  ssh.c  sshaes.c  sshaesni.c  sshbn.c  sshpubk.c  sshrand.c
Putty/unix/: gtkwin.c  uxcons.c  uxmisc.c  uxnet.c  uxucs.c
Putty/windows/: winmisc.c  winpgnt.c  winplink.c  winstuff.h
aespatches/: 0001-Support-of-AES-NI-by-SSH-client.patch  0002-Fix-of-uninitialized-variable.patch  0003-Support-conditional-build-of-AES-NI-by-GCC.patch  0004-Check-target-ISA-while-before-building-AES-NI-code.patch  0005-Move-AES-NI-code-to-the-bottom-of-file.patch  0006-Check-GCC-version-instead-of-checking-__AES__-macro.patch  0007-Add-Clang-support-for-AES-NI.patch  0008-Delete-bogus-__cpuid-function.patch  0009-Use-separate-funcs-for-key-inversion-to-make-Clang-h.patch  0010-Remove-unused-variables.patch  0011-Check-both-AES-and-SSE4.1-extensions.patch  0012-Use-FUNC_ISA-macro-for-GCC-as-pragmas-don-t-work-wit.patch  0013-Simon-Tatham-s-changes-over-the-last-version-of-AES-.patch  Readme.md
aestest/: Makefile  aesdemo.c  aesperf.c  aestest.c  coverage.h  defines.h  geomean.py  makefile  puttymem.c  run.sh
aestest/src/: aescpuid.c  aesperf.c  cpuid.c  defines.h  shacpuid.c  shatest.c
doc/: licence.but
docs/: index.md
putty/: config.c  terminal.h
putty/unix/: uxplink.c  uxsftp.c
putty/windows/: puttygen.rc
src/: aesperf.c  aestest.c  coverage.h  outof.c  puttymem.c  shacpuid.c  shatest.c
test/: Makefile
trunk/: cpuid.c  generate.sh  mksrcarc.sh  putty.h  settings.c  terminal.c
trunk/Putty/: CHECKLST.txt  LATEST.VER  import.c  misc.c  mkfiles.pl  network.h  proxy.c  psftp.c  rlogin.c  sftp.c  ssh.h  sshaes.c  sshaesni.c  sshmd5.c  sshrsag.c  sshsha.c  terminal.c  timing.c  x11fwd.c
trunk/Putty/doc/: blurb.but
trunk/Putty/unix/: gtkwin.c  uxplink.c
trunk/Putty/windows/: win_res.rc2  window.c  winmisc.c  winnet.c  winpgen.c  winplink.c  winproxy.c  winsftp.c
trunk/aestest/: Makefile  aesdemo.c  aesperf.c  aestest.c  build.sh  cpuid.c  defines.h  makefile  puttymem.c  run.sh
trunk/aestest/src/: aestest.c
trunk/doc/: config.but
trunk/putty/: putty.h  ssh.h  sshdss.c  sshrsa.c  timing.c
trunk/putty/unix/: gtkdlg.c  gtkfont.c  unix.h
trunk/putty/windows/: winmisc.c  winstuff.h
trunk/unix/: gtkwin.c  uxpty.c  uxsftp.c
unix/: uxplink.c
wiki/: HowToRunDemonstration.wiki  HowToRunPerformanceUnitTests.wiki  external_sources.wiki
windows/: pageant.rc  window.c  winstuff.h
